[gd_scene load_steps=6 format=3 uid="uid://ecbxwo8h2c1l"]

[ext_resource type="Script" uid="uid://b5gggiqk6vtyl" path="res://scripts/menus/enet_menu.gd" id="1_sjfiw"]
[ext_resource type="Theme" uid="uid://giidcej8oij7" path="res://assets/ui/menu_theme.tres" id="2_cobrq"]
[ext_resource type="PackedScene" uid="uid://dl267poljvrup" path="res://scenes/menus/player_panel.tscn" id="3_m8s1v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m8s1v"]
bg_color = Color(0.460153, 0.658802, 0.474425, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sprw6"]
bg_color = Color(0.63, 0.6048, 0.6048, 1)

[node name="EnetMenu" type="Control" node_paths=PackedStringArray("go_button", "back_button", "host_ip_input", "host_port_input", "option_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cobrq")
script = ExtResource("1_sjfiw")
go_button = NodePath("JoinPanel/VBoxContainer/BoxContainer/Go")
back_button = NodePath("JoinPanel/VBoxContainer/BoxContainer/Back")
host_ip_input = NodePath("JoinPanel/VBoxContainer/HostIP")
host_port_input = NodePath("JoinPanel/VBoxContainer/Port")
option_label = NodePath("JoinPanel/OptionLabel")

[node name="JoinPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionLabel" type="RichTextLabel" parent="JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = -134.0
offset_right = 140.5
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 22
text = "Connect to Host's Game"

[node name="VBoxContainer" type="VBoxContainer" parent="JoinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -66.0
offset_right = 171.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="HostIP" type="LineEdit" parent="JoinPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(0.631373, 0.556863, 0, 1)
theme_override_colors/font_color = Color(0.631373, 0.556863, 0, 1)
theme_override_font_sizes/font_size = 32
text = "127.0.0.1"
placeholder_text = "Enter Host's IP"

[node name="Port" type="LineEdit" parent="JoinPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(0.631373, 0.556863, 0, 1)
theme_override_colors/font_color = Color(0.631373, 0.556863, 0, 1)
theme_override_font_sizes/font_size = 32
text = "8080"
placeholder_text = "Enter Host's Port"

[node name="BoxContainer" type="BoxContainer" parent="JoinPanel/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="JoinPanel/VBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Back"
flat = true

[node name="Go" type="Button" parent="JoinPanel/VBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0, 0.819608, 0, 1)
text = "Go!"
flat = true

[node name="LobbyMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LobbyMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -196.0
offset_right = 139.0
offset_bottom = -107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 101
text = "Lobby"

[node name="Start" type="Button" parent="LobbyMenu"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
offset_left = 610.0
offset_top = 412.0
offset_right = 670.0
offset_bottom = 427.0
size_flags_horizontal = 4
theme = ExtResource("2_cobrq")
theme_override_styles/normal = SubResource("StyleBoxFlat_m8s1v")
text = "START"

[node name="Back" type="Button" parent="LobbyMenu"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
offset_left = 610.0
offset_top = 440.0
offset_right = 670.0
offset_bottom = 455.0
size_flags_horizontal = 4
theme = ExtResource("2_cobrq")
theme_override_styles/normal = SubResource("StyleBoxFlat_sprw6")
text = "BACK"

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -86.0
offset_right = 110.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerPanel" parent="LobbyMenu/VBoxContainer" instance=ExtResource("3_m8s1v")]
layout_mode = 2

[connection signal="pressed" from="JoinPanel/VBoxContainer/BoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="JoinPanel/VBoxContainer/BoxContainer/Go" to="." method="_on_go_pressed"]
[connection signal="pressed" from="LobbyMenu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="LobbyMenu/Back" to="." method="_on_back_pressed"]
